# pico2040

./: CMakeLists.txt  gpio.c  gpio.h  main.c
st7789/: consts.c  font.c  font.h  st7789.c  st7789.h
